--- a/views/home/partials/footer.ejs
+++ b/views/home/partials/footer.ejs
@@ -2,13 +2,13 @@
     <div class="flex-w p-b-90">
         <div class="w-size6 p-t-30 p-l-15 p-r-15 respon3">
             <h4 class="s-text12 p-b-30">
-                GET IN TOUCH
+                Thông Tin Liên Lạc
             </h4>
 
             <div>
                 <p class="s-text7 w-size27">
-                    Any questions? Let us know in store at 4999 46th St, Washington, DC 20116 or call us on (+1) 202 500 0000
-                </p>
+Mọi thông tin thắc mắc vui lòng liên hệ trức tiếp với chúng tôi: <br> Địa chỉ: 8 Đê La Thành, Quận Đống Đa, Hà Nội - 2 Cầu Giấy, Hà Nội<br>SĐT: +84 4 3511 8164
+		</p>
 
                 <div class="flex-m p-t-30">
                     <a href="#" class="fs-18 color1 p-r-20 fab fa-facebook"></a>
@@ -21,31 +21,31 @@
 
         <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
             <h4 class="s-text12 p-b-30">
-                Categories
-            </h4>
+        Thể loại    
+	</h4>
 
             <ul>
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        Men
+                        Giấy Dán Tường
                     </a>
                 </li>
 
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        Women
+                        Giấy Dán Kính
                     </a>
                 </li>
 
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        Dresses
+                        Thảm
                     </a>
                 </li>
 
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        Sunglasses
+                        Xốp Dán Tường
                     </a>
                 </li>
             </ul>
@@ -59,51 +59,52 @@
             <ul>
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        Search
+                        Tìm Kiếm
                     </a>
                 </li>
 
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        About Us
+                        Giới Thiệu Về Chúng Tôi
                     </a>
                 </li>
 
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        Contact Us
+                        Liên Hệ Với Chúng Tôi
                     </a>
                 </li>
-
+<!--
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
                         Returns
                     </a>
                 </li>
+-->
             </ul>
         </div>
 
         <div class="w-size7 p-t-30 p-l-15 p-r-15 respon4">
             <h4 class="s-text12 p-b-30">
-                Help
+                Giúp Đỡ
             </h4>
 
             <ul>
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        Track Order
+                       Tìm Kiếm Đơn Hàng
                     </a>
                 </li>
 
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        Returns
+                        Gửi Trả Hàng
                     </a>
                 </li>
 
                 <li class="p-b-9">
                     <a href="#" class="s-text7">
-                        Shipping
+                        Vận Chuyển Hàng
                     </a>
                 </li>
 
@@ -117,7 +118,7 @@
 
         <div class="w-size8 p-t-30 p-l-15 p-r-15 respon3">
             <h4 class="s-text12 p-b-30">
-                Newsletter
+                Bản Tin
             </h4>
 
             <form>
@@ -129,7 +130,7 @@
                 <div class="w-size2 p-t-20">
                     <!-- Button -->
                     <button class="flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4">
-                        Subscribe
+                        Theo Dõi
                     </button>
                 </div>
 
