--- a/views/home/partials/banner.ejs
+++ b/views/home/partials/banner.ejs
@@ -72,17 +72,17 @@
 
                     <div class="block2-content sizefull ab-t-l flex-col-c-m">
                         <h4 class="m-text4 t-center w-size3 p-b-8">
-                            Sign up &amp; get 20% off
+                            Đăng Ký Ngay Hôm Nay
                         </h4>
 
                         <p class="t-center w-size4">
-                            Be the first to know about the latest fashion news and get exclu-sive offers
-                        </p>
+				Bạn sẽ là người đầu tiên biết đến những sản phẩm mới nhất và những ưu đãi không thể bỏ qua.
+			 </p>
 
                         <div class="w-size2 p-t-25">
                             <!-- Button -->
                             <a href="/register" class="flex-c-m size2 bg4 bo-rad-23 hov1 m-text3 trans-0-4">
-                                Sign Up
+                                Đăng Ký
                             </a>
                         </div>
                     </div>
