--- a/views/home/partials/slide.ejs
+++ b/views/home/partials/slide.ejs
@@ -4,17 +4,17 @@
             <div class="item-slick1 item1-slick1" style="background-image: url(images/master-slide-02.jpg);">
                 <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
                     <span class="caption1-slide1 m-text1 t-center animated visible-false m-b-15" data-appear="fadeInDown">
-                        Wallpaper Collection 2018
+                        Bộ Sưu Tập 2019
                     </span>
 
                     <h2 class="caption2-slide1 xl-text1 t-center animated visible-false m-b-37" data-appear="fadeInUp">
-                        New arrivals
+                        Sản Phẩm Mới
                     </h2>
 
                     <div class="wrap-btn-slide1 w-size1 animated visible-false" data-appear="zoomIn">
                         <!-- Button -->
                         <a href="/products" class="flex-c-m size2 bo-rad-23 s-text2 bgwhite hov1 trans-0-4">
-                            Shop Now
+                            Nhấn Mua Ngay
                         </a>
                     </div>
                 </div>
@@ -23,17 +23,17 @@
             <div class="item-slick1 item2-slick1" style="background-image: url(images/master-slide-03.jpg);">
                 <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
                     <span class="caption1-slide1 m-text1 t-center animated visible-false m-b-15" data-appear="rollIn">
-                        Wallpaper Collection 2018
+                        Bộ Sưu Tập 2019
                     </span>
 
                     <h2 class="caption2-slide1 xl-text1 t-center animated visible-false m-b-37" data-appear="lightSpeedIn">
-                        New arrivals
+                        Sản Phẩm Mới
                     </h2>
 
                     <div class="wrap-btn-slide1 w-size1 animated visible-false" data-appear="slideInUp">
                         <!-- Button -->
                         <a href="/products" class="flex-c-m size2 bo-rad-23 s-text2 bgwhite hov1 trans-0-4">
-                            Shop Now
+                            Nhấn Mua Ngay
                         </a>
                     </div>
                 </div>
@@ -42,17 +42,17 @@
             <div class="item-slick1 item3-slick1" style="background-image: url(images/master-slide-04.jpg);">
                 <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
                     <span class="caption1-slide1 m-text1 t-center animated visible-false m-b-15" data-appear="rotateInDownLeft">
-                        Wallpaper Collection 2018
+                        Bộ Sưu Tập 2019
                     </span>
 
                     <h2 class="caption2-slide1 xl-text1 t-center animated visible-false m-b-37" data-appear="rotateInUpRight">
-                        New arrivals
+                        Sản Phẩm Mới
                     </h2>
 
                     <div class="wrap-btn-slide1 w-size1 animated visible-false" data-appear="rotateIn">
                         <!-- Button -->
                         <a href="/products" class="flex-c-m size2 bo-rad-23 s-text2 bgwhite hov1 trans-0-4">
-                            Shop Now
+                             Nhấn Mua Ngay
                         </a>
                     </div>
                 </div>
